# COSC381-lab7-testing-with-mock-jcava

./: branch-info.txt
presidio-anonymizer/: pyproject.toml
presidio-anonymizer/tests/: test_anonymizer_engine.py  test_recognizer_result.py  test_recognizer_result.py.bak
presidio-anonymizer/tests/operators/: test_encrypt.py  test_encrypt.py.bak
