[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
[tool.poetry]
name = "presidio-anonymizer"
version = "0.1.0"
description = "Presidio Anonymizer Lab 7"
authors = ["jcava17 <you@example.com>"]
[tool.poetry.dependencies]
python = ">3.9.1,<3.13"
# or simply
# python = ">=3.10,<3.13"
cryptography = "^46.0.2"

[project]
name = "presidio_anonymizer"
version = "2.2.360"
description = "Presidio Anonymizer package - replaces analyzed text with desired values."
authors = [{name = "Presidio", email = "presidio@microsoft.com"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["presidio_anonymizer"]
urls = {Homepage = "https://github.com/Microsoft/presidio"}
readme = "README.md"

requires-python = ">=3.9,<4.0"
dependencies = [
    "cryptography (<44.1)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[project.optional-dependencies]
server = [
    "flask (>=1.1)",
    "gunicorn; platform_system != 'Windows'",
    "waitress; platform_system == 'Windows'"
]
ahds = [
    "azure-identity (>=1.23.0,<2.0.0)",
    "azure-health-deidentification (>=1.1.0b1,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
pip = "*"
ruff = "*"
pytest = "*"
pytest-mock = "*"
python-dotenv = "*"
pre_commit = "*"
pytest-cov = "^7.0.0"
